Добавил плагин для запуска теста перед коммитом и поправил недочёты

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "description": "Личный проект «Кэт энерджи» от HTML Academy",
   "devDependencies": {
+    "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "7.2.x",
     "browser-sync": "2.23.x",
     "gulp": "3.9.x",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
     "gulp-sass": "3.1.x",
-    "@htmlacademy/editorconfig-cli": "1.x",
+    "pre-commit": "^1.2.2",
     "stylelint": "8.4.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -21,6 +22,7 @@
     "build": "gulp style",
     "start": "gulp serve"
   },
+  "pre-commit": "test",
   "browserslist": [
     "last 2 versions",
     "IE 11",
