--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "del": "^3.0.0",
     "gh-pages": "^1.1.0",
     "gulp": "3.9.x",
+    "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
