--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "browser-sync": "2.23.x",
     "css-mqpacker": "^6.0.2",
     "del": "^3.0.0",
-    "gh-pages": "^1.1.0",
     "gulp": "3.9.x",
     "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-image": "^4.3.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "7.0.x",
@@ -39,7 +39,7 @@
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
     "start": "npm run build && gulp serve",
-    "deploy": "gh-pages -d build"
+    "deploy": "gulp deploy"
   },
   "pre-commit": "test",
   "browserslist": [
