--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "css-mqpacker": "^6.0.2",
     "del": "^3.0.0",
     "gulp": "3.9.x",
+    "gulp-changed": "^3.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
